UI/UX adjustments

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -10,61 +10,63 @@
     </p>
 
     <div class="skills">
-      <div class="skill-category">
-        <h2>Project Management</h2>
-        <ul>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>GitLab</li>
-        </ul>
-      </div>
-
-      <div class="skill-category">
-        <h2>Frontend</h2>
-        <ul>
-          <li>Angular</li>
-          <li>React</li>
-          <li>TypeScript</li>
-          <li>HTML</li>
-          <li>CSS & SCSS</li>
-          <li>Figma</li>
-          <li>Bootstrap</li>
-        </ul>
-      </div>
-
-      <div class="skill-category">
-        <h2>Backend</h2>
-        <ul>
-          <li>Node.js</li>
-          <li>Express</li>
-          <li>NestJS</li>
-          <li>MongoDB</li>
-          <li>WebSockets</li>
-        </ul>
-      </div>
-
-
-      <div class="skill-category">
-        <h2>Programming Languages</h2>
-        <ul>
-          <li>Python</li>
-          <li>C/C++</li>
-          <li>Assembly</li>
-          <li>Java</li>
-          <li>Kotlin</li>
-        </ul>
-      </div>
-
-      <div class="skill-category">
-        <h2>Soft Skills</h2>
-        <ul>
-          <li>Quick Learner</li>
-          <li>Autonomy</li>
-          <li>Teamwork</li>
-          <li>Problem-solving</li>
-          <li>Attention to detail</li>
-          <li>Communication</li>
-        </ul>
+      <h1 class="skills-title">Skills</h1>
+      <div class="skills-list">
+        <div class="skill-category">
+          <h2>Project Management</h2>
+          <ul>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>GitLab</li>
+          </ul>
+        </div>
+        
+        <div class="skill-category">
+          <h2>Backend</h2>
+          <ul>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>NestJS</li>
+            <li>MongoDB</li>
+            <li>WebSockets</li>
+          </ul>
+        </div>
+        
+        <div class="skill-category">
+          <h2>Frontend</h2>
+          <ul>
+            <li>Angular</li>
+            <li>React</li>
+            <li>TypeScript</li>
+            <li>HTML</li>
+            <li>CSS & SCSS</li>
+            <li>Figma</li>
+            <li>Bootstrap</li>
+          </ul>
+        </div>
+  
+        <div class="skill-category">
+          <h2>Programming Languages</h2>
+          <ul>
+            <li>Python</li>
+            <li>C/C++</li>
+            <li>Assembly</li>
+            <li>Java</li>
+            <li>Kotlin</li>
+          </ul>
+        </div>
+  
+        <div class="skill-category">
+          <h2>Soft Skills</h2>
+          <ul>
+            <li>Quick Learner</li>
+            <li>Autonomy</li>
+            <li>Teamwork</li>
+            <li>Problem-solving</li>
+            <li>Attention to detail</li>
+            <li>Communication</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
