--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -11,10 +11,11 @@
     background-repeat: no-repeat;
 
     h1 {
-        font-size: 80px;
+        font-size: 5rem;
         position: absolute;
-        top: 30%;
-        left: 32%;
+        top: 30%; 
+        left: 50%;
+        transform: translateX(-50%);
         color: white;
     }
     
@@ -81,7 +82,7 @@
       
         button {
             font-weight: 600;
-            font-size: 25px;
+            font-size: 1.5rem;
             padding: 5px 30px;
             color: white;
             background: none;
