UI/UX adjustments

--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -90,6 +90,8 @@
                 writing-mode: vertical-rl;
                 transform: rotate(180deg);
                 transition: 0.7s ease;
+                word-spacing: 0.3rem;
+                line-height: 1;
             }
 
             .details{
