--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -6,7 +6,7 @@
     font-family: 'Jost', sans-serif;
     font-weight: 600;
     font-size: 1.2rem;
-    padding: 20px;
+    padding: 20px 25px;
     color: white;
     background: transparent;
     border: 2px solid white;
